Fixed links and public key on small screens

--- a/main.css
+++ b/main.css
@@ -171,8 +171,8 @@ a:focus-visible {
 	}
 }
 
-/* Properties for devices with screen width of 600px or lower */
-@media (max-width: 600px) {
+/* Properties for devices with small screens (width of 650px or lower) */
+@media (max-width: 650px) {
 	img {
 		width: 100%;
 	}
@@ -186,6 +186,7 @@ a:focus-visible {
 	}
 	
 	.links a {
+		font-size: 1.5rem;
 		width: 43vw;
 	}
 	
@@ -205,6 +206,6 @@ a:focus-visible {
 	}
 	
 	#iMessagePublicKey {
-		width: 100%;
+		width: 95%;
 		padding: 5px;
 	}
